# io-msgraph

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flake.nix
docs/: README.md
src/: coroutine.rs  lib.rs
src/v1/: client.rs  field.rs  mod.rs  query.rs  send.rs  types.rs
src/v1/rest/: mod.rs  users.rs
src/v1/rest/users/: contact_folders.rs  contacts.rs  get.rs  mail_folders.rs  messages.rs  mod.rs  send_mail.rs  types.rs
src/v1/rest/users/contact_folders/: child_folders.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  types.rs  update.rs
src/v1/rest/users/contact_folders/types/: contact_folder.rs  contact_folders_list_response.rs  mod.rs
src/v1/rest/users/contacts/: create.rs  delete.rs  delta.rs  get.rs  list.rs  mod.rs  types.rs  update.rs
src/v1/rest/users/contacts/types/: contact.rs  contact_delta.rs  contacts_delta_response.rs  contacts_list_response.rs  mod.rs  physical_address.rs  removed.rs  single_value_extended_property.rs
src/v1/rest/users/mail_folders/: child_folders.rs  copy.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  move.rs  types.rs  update.rs
src/v1/rest/users/mail_folders/types/: mail_folder.rs  mail_folders_list_response.rs  mod.rs
src/v1/rest/users/messages/: attachments.rs  copy.rs  create.rs  create_mime.rs  delete.rs  get.rs  get_raw.rs  list.rs  mod.rs  move.rs  move_to.rs  send.rs  types.rs  update.rs
src/v1/rest/users/messages/attachments/: create.rs  delete.rs  get_raw.rs  list.rs  mod.rs  types.rs
src/v1/rest/users/messages/attachments/types/: attachment.rs  mod.rs  (+1 more)
src/v1/rest/users/messages/types/: body_type.rs  email_address.rs  flag_status.rs  followup_flag.rs  importance.rs  item_body.rs  message.rs  messages_list_response.rs  mod.rs  recipient.rs
tests/: common.rs  coroutines.rs  msgraph.rs
